my plotly updates

--- a/iris-classification-starter.ipynb
+++ b/iris-classification-starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,30 +26,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sl</th>\n",
+       "      <th>sw</th>\n",
+       "      <th>pl</th>\n",
+       "      <th>pw</th>\n",
+       "      <th>species</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>5.7</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      sl   sw   pl   pw  species\n",
+       "55   5.7  2.8  4.5  1.3        1\n",
+       "22   4.6  3.6  1.0  0.2        0\n",
+       "83   6.0  2.7  5.1  1.6        1\n",
+       "97   6.2  2.9  4.3  1.3        1\n",
+       "108  6.7  2.5  5.8  1.8        2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# read in the iris dataset\n"
+    "# read in the iris dataset\n",
+    "\n",
+    "df = pd.read_pickle(\"resources/iris.pkl\")\n",
+    "df.sample(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    50\n",
+       "1    50\n",
+       "0    50\n",
+       "Name: species, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# how many do we have of each species?\n"
+    "# how many do we have of each species?\n",
+    "\n",
+    "df[\"species\"].value_counts()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sl</th>\n",
+       "      <th>sw</th>\n",
+       "      <th>pl</th>\n",
+       "      <th>pw</th>\n",
+       "      <th>species</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>5.843333</td>\n",
+       "      <td>3.057333</td>\n",
+       "      <td>3.758000</td>\n",
+       "      <td>1.199333</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.828066</td>\n",
+       "      <td>0.435866</td>\n",
+       "      <td>1.765298</td>\n",
+       "      <td>0.762238</td>\n",
+       "      <td>0.819232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>4.300000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5.100000</td>\n",
+       "      <td>2.800000</td>\n",
+       "      <td>1.600000</td>\n",
+       "      <td>0.300000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5.800000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.350000</td>\n",
+       "      <td>1.300000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.400000</td>\n",
+       "      <td>3.300000</td>\n",
+       "      <td>5.100000</td>\n",
+       "      <td>1.800000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.900000</td>\n",
+       "      <td>4.400000</td>\n",
+       "      <td>6.900000</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               sl          sw          pl          pw     species\n",
+       "count  150.000000  150.000000  150.000000  150.000000  150.000000\n",
+       "mean     5.843333    3.057333    3.758000    1.199333    1.000000\n",
+       "std      0.828066    0.435866    1.765298    0.762238    0.819232\n",
+       "min      4.300000    2.000000    1.000000    0.100000    0.000000\n",
+       "25%      5.100000    2.800000    1.600000    0.300000    0.000000\n",
+       "50%      5.800000    3.000000    4.350000    1.300000    1.000000\n",
+       "75%      6.400000    3.300000    5.100000    1.800000    2.000000\n",
+       "max      7.900000    4.400000    6.900000    2.500000    2.000000"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# describe the data - no need for standardization!\n",
+    "\n",
+    "df.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# describe the data - no need for standardization!\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -61,20 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# establish the predictors and the target\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train-test split\n"
+    "# establish the predictors and the target\n",
+    "\n",
+    "X = df[[\"sl\",\"pl\"]]\n",
+    "y = df[\"species\"]\n"
    ]
   },
   {
@@ -83,25 +306,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# instantiate the classifier\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fit on the training dataset\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# predict on the testing dataset\n"
+    "# train-test split\n",
+    "\n",
+    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.3,random_state=47)\n"
    ]
   },
   {
@@ -110,16 +317,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# evaluate the accuracy\n"
+    "# instantiate the classifier\n",
+    "\n",
+    "mymodel = KNeighborsClassifier(n_neighbors=5,weights=\"distance\",metric=\"euclidean\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='euclidean',\n",
+       "                     metric_params=None, n_jobs=None, n_neighbors=5, p=2,\n",
+       "                     weights='distance')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# fit on the training dataset\n",
+    "\n",
+    "mymodel.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# examine the confusion matrix\n"
+    "# predict on the testing dataset\n",
+    "\n",
+    "y_preds = mymodel.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9333333333333333"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# evaluate the accuracy\n",
+    "\n",
+    "metrics.accuracy_score(y_test,y_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[18,  0,  0],\n",
+       "       [ 0,  9,  0],\n",
+       "       [ 0,  3, 15]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# examine the confusion matrix\n",
+    "\n",
+    "metrics.confusion_matrix(y_test,y_preds)"
    ]
   },
   {
@@ -131,38 +419,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a fake new data point\n"
+    "# Create a fake new data point\n",
+    "\n",
+    "new_obs = [[4.9,2.7]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# predict for our new observation\n"
+    "# predict for our new observation\n",
+    "\n",
+    "mymodel.predict(new_obs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[0.36055513, 0.6       , 0.60827625, 0.80622577, 1.0198039 ]]),\n",
+       " array([[37, 70, 18,  6, 98]]))"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# What are the indices of the 5 neighbors nearest to that new observation?\n"
+    "# What are the indices of the 5 neighbors nearest to that new observation?\n",
+    "\n",
+    "mymodel.kneighbors(new_obs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create multiple KNN models and pickle for use in the plotly dash app.\n"
+    "# Create multiple KNN models and pickle for use in the plotly dash app.\n",
+    "\n",
+    "for k in [5,10,15,20,25]:\n",
+    "    KNeighborsClassifier(n_neighbors=k,weights=\"distance\",metric=\"euclidean\")\n",
+    "    mymodel.fit(X_train,y_train)\n",
+    "    y_preds = mymodel.predict(X_test)\n",
+    "    file = open(f'resources/model_k{k}.pkl','wb')\n",
+    "    pickle.dump(mymodel,file)\n",
+    "    file.close()\n",
+    "    \n",
+    "\n",
+    "# [KNeighborsClassifier(n_neighbors=k,weights=\"distance\",metric=\"euclidean\") for k in [5,10,15,20,25]]"
    ]
   }
  ],
@@ -186,5 +514,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
